fix text alignment

--- a/styles.less
+++ b/styles.less
@@ -288,6 +288,7 @@ header {
 
   .blurb {
     width: 90%;
+    margin: 0 auto;
     font-family: @font-body;
     font-size: 1.5rem;
     letter-spacing: -0.1px;
